// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parses empty ineligible offenses array 1`] = `
{
  "eligibleCriteria": {
    "usPaFulfilledRequirements": {
      "eligibleDate": 2023-12-01T00:00:00.000Z,
    },
    "usPaNoHighSanctionsInPastYear": {},
    "usPaNotServingIneligibleOffenseForAdminSupervision": {
      "ineligibleOffenses": [],
      "ineligibleSentencesExpirationDate": [],
    },
  },
  "externalId": "abc123",
  "ineligibleCriteria": {},
  "stateCode": "US_PA",
}
`;

exports[`parses null reason fields 1`] = `
{
  "eligibleCriteria": {
    "usPaFulfilledRequirements": null,
    "usPaNoHighSanctionsInPastYear": null,
    "usPaNotServingIneligibleOffenseForAdminSupervision": null,
  },
  "externalId": "abc123",
  "ineligibleCriteria": {},
  "stateCode": "US_PA",
}
`;

exports[`record parses as expected 1`] = `
{
  "eligibleCriteria": {
    "usPaFulfilledRequirements": {
      "eligibleDate": 2023-12-01T00:00:00.000Z,
    },
    "usPaNoHighSanctionsInPastYear": {},
    "usPaNotServingIneligibleOffenseForAdminSupervision": {
      "ineligibleOffenses": [
        "ABC",
        "DEF",
      ],
      "ineligibleSentencesExpirationDate": [
        2023-06-01T00:00:00.000Z,
        2022-01-01T00:00:00.000Z,
      ],
    },
  },
  "externalId": "abc123",
  "ineligibleCriteria": {},
  "stateCode": "US_PA",
}
`;
